--- a/pom.xml
+++ b/pom.xml
@@ -1947,6 +1947,34 @@
         </configuration>
       </plugin>
 
+      <!-- ======================================================= -->
+      <!--     OpenRewrite Automation.                             -->
+      <!-- ======================================================= -->
+      <plugin>
+        <groupId>org.openrewrite.maven</groupId>
+        <artifactId>rewrite-maven-plugin</artifactId>
+        <version>4.4.0</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.openrewrite.recipe</groupId>
+            <artifactId>rewrite-testing-frameworks</artifactId>
+            <version>1.5.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.openrewrite.recipe</groupId>
+            <artifactId>rewrite-spring</artifactId>
+            <version>4.4.0</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <activeStyles>
+            <activeStyle>org.openrewrite.java.SpringFormat</activeStyle>
+          </activeStyles>
+          <activeRecipes>
+            <recipe>org.geotools.sample</recipe>
+          </activeRecipes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
